--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,57 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <!--icon kit-->
+    <script src="https://kit.fontawesome.com/ef8993b96a.js" crossorigin="anonymous"></script>
+
+    <!--comment-->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Title</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>LevelCreator - A Collaborative Level Building Tool</title>
+    <link href="webjars/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="webjars/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- Theme CSS -->
+    <link href="../static/css/indexsub.css" rel="stylesheet">
+
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#BBF8FC">
+    <a class="navbar-brand" href="#">LevelCreator</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-     <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#BBF8FC">
-         <a class="navbar-brand" href="#">LevelCreator</a>
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-             <span class="navbar-toggler-icon"></span>
-         </button>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Register</a>
+        </li>
+    </ul>
+    </div>
+</nav>
 
-         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-             <ul class="navbar-nav mr-auto">
-                 <li class="nav-item active">
-                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                 </li>
+<div class="masthead bg-primary text-white text-center">
 
-                 <li class="nav-item">
-                     <a class="nav-link" href="#">My Work</a>
-                 </li>
+    <!-- Masthead Avatar Image -->
+    <img class="masthead-avatar mb-5" src="../static/images/LogoMakr_7pM1hX.png" alt="">
 
-                 <li class="nav-item">
-                     <a class="nav-link" href="#">Following<span class="badge badge-pill badge-info mx-1">12</span></a>
-                 </li>
-             </ul>
-
-             <form class="form-inline mt-5 my-lg-0">
-                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-             </form>
-
-             <ul class="navbar-nav ml-5">
-                 <li class="nav-item">
-                     <a class="nav-link" href="#"><i class="fas fa-user mx-1"></i>Username</a>
-                 </li>
-                 <li class="nav-item">
-                     <a class="nav-link" href="#">Log out</a>
-                 </li>
-             </ul>
-         </div>
-     </nav>
+    <!-- Icon Divider -->
+    <div class="divider-custom divider-light">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+            <i class="fab fa-diaspora"></i>
+            <!--            <i class="fas fa-star"></i>-->
+        </div>
+        <div class="divider-custom-line"></div>
+    </div>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <h3 class="mb-5">
+        <em>LevelCreator - A Level Building Tool with Collaborative Community</em>
+    </h3>
+    <!--    <a class="btn btn-success btn-xl js-scroll-trigger" href="#about">About us</a>-->
+</div>
+<!--<div class="overlay"></div>-->
+
+<!-- Copyright Section -->
+<section class="copyright py-4 text-center text-white">
+    <div class="container">
+        <small>Copyright &copy; Your Website 2019</small>
+    </div>
+</section>
+
 </body>
 </html>
