--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,35 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Title</title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Merriweather&display=swap" rel="stylesheet">
+
+    <!-- Theme CSS -->
+    <link href="../static/css/freelancer.min.css" rel="stylesheet">
+    <link rel = "stylesheet" href = "../static/css/style_1.css">
+
+    <title>Login</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#BBF8FC">
-        <a class="navbar-brand" href="#">LevelCreator</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<div class="h-100 d-flex justify-content-center align-items-center">
+    <div class="form-login">
+        <img src = "img/LogoMakr_9uhDkH.png" class = "logo">
 
-
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Register</a>
-            </li>
-        </ul>
+        <div class="form-group form-inline">
+            <label>Username:</label>
+            <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="Email Address" />
         </div>
-    </nav>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+        <div class="form-group form-inline">
+            <label>Password:</label>
+            <input type="text" id="userPassword" class="form-control input-sm chat-input" placeholder="Password" />
+        </div>
+        <div class="wrapper">
+                    <span class="group-btn">
+                        <a href="#" class="btn btn-primary btn-lg">Login <i class="fa fa-sign-in"></i></a>
+                    </span>
+            <span class="group-btn">
+                        <a href="#" class="btn btn-primary btn-lg">Register <i class="fa fa-sign-in"></i></a>
+                    </span>
+        </div>
+    </div>
+</div>
 </body>
 </html>
