--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -9,40 +9,42 @@
 
     <!-- Theme CSS -->
     <link href="../static/css/freelancer.min.css" rel="stylesheet">
-    <link rel = "stylesheet" href = "../static/css/style_1.css">
+    <link rel="stylesheet" href="../static/css/style_1.css">
 
     <title>Register</title>
 </head>
 <body>
 <div class="h-100 d-flex justify-content-center align-items-center">
+
     <div class="form-login-1">
-        <img src = "img/LogoMakr_9uhDkH.png" class = "logo-1">
-        <h4>Start Creating ...</h4>
-        <div class="form-group form-inline">
-            <label>Username:</label>
-            <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="Username" />
-        </div>
-        <br>
-        <div class="form-group form-inline">
-            <label>Email Address:</label>
-            <input type="text" id="email" class="form-control input-sm chat-input" placeholder="Email Address" />
-        </div>
-        <br>
-        <div class="form-group form-inline">
-            <label>Password:</label>
-            <input type="text" id="userPassword" class="form-control input-sm chat-input" placeholder="Password" />
-        </div>
-        <br>
-        <div class="form-group form-inline">
-            <label>Confirm Password: </label>
-            <input type="text" id="confPassword" class="form-control input-sm chat-input" placeholder="Confirm Password" />
-        </div>
-        <br>
-        <div class="wrapper">
+        <form>
+            <img src="img/LogoMakr_9uhDkH.png" class="logo-1">
+            <h4>Start Creating ...</h4>
+            <div class="form-group form-inline">
+                <label for="Username" >Username:</label>
+                <input type="text" class="form-control input-sm chat-input" id="Username"
+                       placeholder="Enter Username">
+            </div>
+            <div class="form-group form-inline">
+                <label for="Email">Email Address:</label>
+                <input type="email" class="form-control input-sm chat-input" id="Email" placeholder="Enter Username">
+            </div>
+            <div class="form-group form-inline">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control input-sm chat-input" id="password"
+                       placeholder="Enter password">
+            </div>
+            <div class="form-group form-inline">
+                <label for="confirmpassword">Confirm Password:</label>
+                <input type="password" class="form-control input-sm chat-input" id="confirmpassword"
+                       placeholder="Confirm Password">
+            </div>
+            <div class="wrapper">
                     <span class="group-btn">
-                        <a href="#" class="btn btn-primary btn-lg">Submit <i class="fa fa-sign-in"></i></a>
+                         <button type="submit" class="btn btn-primary">Submit</button>
                     </span>
-        </div>
+            </div>
+        </form>
     </div>
 </div>
 </body>
