--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,73 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!--icon kit-->
-    <script src="https://kit.fontawesome.com/ef8993b96a.js" crossorigin="anonymous"></script>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymleaf.org/extras/spring-security">
 
-    <!--comment-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>LevelCreator - A Collaborative Level Building Tool</title>
-    <link href="webjars/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"/>
-    <script src="webjars/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<head th:insert="fragments.html :: headerfiles"></head>
 
-    <!-- Theme CSS -->
-    <link href="../static/css/indexsub.css" rel="stylesheet">
-
-</head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#BBF8FC">
-    <a class="navbar-brand" href="#">LevelCreator</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Register</a>
-        </li>
-    </ul>
-    </div>
-</nav>
+<header th:insert="fragments.html :: nav"></header>
 
-<div class="masthead bg-primary text-white text-center">
+<div class="container" style="max-width: 2000px ">
 
-    <!-- Masthead Avatar Image -->
-    <img class="masthead-avatar mb-5" src="../static/images/LogoMakr_7pM1hX.png" alt="">
-
-    <!-- Icon Divider -->
-    <div class="divider-custom divider-light">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-            <i class="fab fa-diaspora"></i>
-            <!--            <i class="fas fa-star"></i>-->
+    <div class="d-flex flex-row justify-content-end">
+        <div sec:authorize ="isAuthenticated()" class="custom-control custom-switch followbutton">
+            <input type="checkbox" class="custom-control-input" id="customSwitch1">
+            <label class="custom-control-label" for="customSwitch1">Following User</label>
         </div>
-        <div class="divider-custom-line"></div>
     </div>
 
+    <div class="row">
+        <div class="col">
+            <div class="card" style="width: 18rem; margin:auto;">
+                <img src="images/sample1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Tree Map</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">By: Will Lee</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem; margin:auto;">
+                <img src="images/sample2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Mario Maker</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">By: Bobby Lee</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem; margin:auto;">
+                <img src="images/sample3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sand Biome</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">By: Teal Jin</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;margin:auto;">
+                <img src="images/sample4.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Jumping Course</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">By: Mike Johnson</h6>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <h3 class="mb-5">
-        <em>LevelCreator - A Level Building Tool with Collaborative Community</em>
-    </h3>
-    <!--    <a class="btn btn-success btn-xl js-scroll-trigger" href="#about">About us</a>-->
+    <div class="row">
+        <div class="col">
+            <div class="card" style="width: 18rem;margin:auto;">
+                <img src="images/sample5.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Hamster Maze</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">By: Kelly Lorin</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;margin:auto;">
+                <img src="images/sample6.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Greenville</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">By: Jammi Lani</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;margin:auto;">
+                <img src="images/sample7.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Cactus Racecourse</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">By: Sven Tree</h6>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;margin:auto;">
+                <img src="images/sample8.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Colorful Jump</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">By: Rdik Tomy</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class=" row">
+        <nav aria-label="Page navigation example" style="margin:auto">
+            <ul class="pagination">
+                <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">4</a></li>
+                <li class="page-item"><a class="page-link" href="#">5</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </nav>
+
+    </div>
 </div>
-<!--<div class="overlay"></div>-->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
-<!-- Copyright Section -->
-<section class="copyright py-4 text-center text-white">
-    <div class="container">
-        <small>Copyright &copy; Your Website 2019</small>
-    </div>
-</section>
 
 </body>
 </html>
