--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,7 +12,7 @@
     <link href="webjars/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="webjars/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
+    <link rel="stylesheet" type="text/css" th:href="@{css/indexsub.css}"/>
     <title>LevelCreator - A Collaborative Level Building Tool</title>
 </head>
 
@@ -24,10 +27,13 @@
 
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="/login">Login</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Register</a>
+            <a class="nav-link" href="/registration">Register</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/home">Just look around</a>
         </li>
     </ul>
     </div>
@@ -35,7 +41,7 @@
 <div class="masthead bg-primary text-white text-center">
 
     <!-- Masthead Avatar Image -->
-    <img class="masthead-avatar mb-5" src="../static/images/LogoMakr_7pM1hX.png" alt="">
+    <img class="masthead-avatar mb-5" src="images/LogoMakr7pM1hX.png" alt="">
 
     <!-- Icon Divider -->
     <div class="divider-custom divider-light">
