--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Merriweather&display=swap" rel="stylesheet">
 
-    <!-- Theme CSS -->
-    <link href="../static/css/freelancer.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/style_1.css">
+<html xmlns:th="http://www.thymeleaf.org">
 
+<head th:insert="fragments.html :: headerfiles-form">
     <title>Register</title>
 </head>
 <body>
 <div class="h-100 d-flex justify-content-center align-items-center">
 
     <div class="form-login-1">
-        <form>
-            <img src="img/LogoMakr_9uhDkH.png" class="logo-1">
+        <form th:action="@{/registration}" th:object="${user}" method="POST">
+            <img src="images/LogoMakr9uhDkH.png" class="logo-1">
             <h4>Start Creating ...</h4>
             <div class="form-group form-inline">
                 <label for="Username" >Username:</label>
-                <input type="text" class="form-control input-sm chat-input" id="Username"
-                       placeholder="Enter Username">
+                <input type="text" class="form-control input-sm chat-input" th:field="*{username}" id="Username" placeholder="Enter username">
+                <p class="error-message"
+                   th:each="error: ${#fields.errors('username')}"
+                   th:text="${error}">Validation error</p>
             </div>
             <div class="form-group form-inline">
                 <label for="Email">Email Address:</label>
-                <input type="email" class="form-control input-sm chat-input" id="Email" placeholder="Enter Username">
+                <input type="email" class="form-control input-sm chat-input" th:field="*{email}" id="Email" placeholder="Enter email">
+                <p class="error-message"
+                   th:each="error: ${#fields.errors('email')}"
+                   th:text="${error}">Validation error</p>
             </div>
             <div class="form-group form-inline">
                 <label for="password">Password:</label>
-                <input type="password" class="form-control input-sm chat-input" id="password"
-                       placeholder="Enter password">
-            </div>
-            <div class="form-group form-inline">
-                <label for="confirmpassword">Confirm Password:</label>
-                <input type="password" class="form-control input-sm chat-input" id="confirmpassword"
-                       placeholder="Confirm Password">
+                <input type="password" class="form-control input-sm chat-input" th:field="*{password}" id="password" placeholder="Enter password">
+                <p class="error-message"
+                   th:each="error: ${#fields.errors('password')}"
+                   th:text="${error}">Validation error</p>
             </div>
             <div class="wrapper">
-                    <span class="group-btn">
-                         <button type="submit" class="btn btn-primary">Submit</button>
-                    </span>
+                <span class="group-btn">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </span>
+                <a href="/"> Cancel </a>
             </div>
         </form>
     </div>
