--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <html xmlns:th="http://www.thymeleaf.org">
-
-<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,6 +11,7 @@
     <script src="webjars/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" type="text/css" th:href="@{css/indexsub.css}"/>
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=PT+Sans+Narrow&display=swap" rel="stylesheet">
     <title>LevelCreator - A Collaborative Level Building Tool</title>
 </head>
 
@@ -36,12 +35,11 @@
             <a class="nav-link" href="/home">Just look around</a>
         </li>
     </ul>
-    </div>
 </nav>
-<div class="masthead bg-primary text-white text-center">
+<div class="masthead bg-index text-white text-center">
 
     <!-- Masthead Avatar Image -->
-    <img class="masthead-avatar mb-5" src="images/LogoMakr7pM1hX.png" alt="">
+    <img class="masthead-avatar mb-5" src="images/levelcreator_logo_1.png" alt="">
 
     <!-- Icon Divider -->
     <div class="divider-custom divider-light">
@@ -54,9 +52,98 @@
 
 
     <h3 class="mb-5">
-        <em>LevelCreator - A Level Building Tool with Collaborative Community</em>
+        <em>A Level Building Tool with a Collaborative Community</em>
     </h3>
 </div>
+
+<section class="page-section bg-light">
+    <div class="container">
+        <div class="text-center">
+            <h1 class="section-heading text-uppercase">Maps from Level Builders in Our Community</h1>
+        </div>
+        <br>
+        <br>
+        <div class="row text-center">
+            <div class="col-md-4 col-xs-12">
+                <img src = "../images/sample3.png" style="width: 90%;">
+            </div>
+            <div class="col-md-4 col-xs-12">
+                <img src = "../images/sample6.png" style="width: 90%;">
+
+            </div>
+            <div class="col-md-4 col-xs-12">
+                <img src = "../images/sample1.png" style="width: 90%;">
+
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row text-center">
+            <div class="col-md-4 col-xs-12">
+                <img src = "../images/sample2.png" style="width: 90%;">
+            </div>
+            <div class="col-md-4 col-xs-12">
+                <img src = "../images/sample5.png" style="width: 90%;">
+            </div>
+            <div class="col-md-4 col-xs-12">
+                <img src = "../images/sample4.png" style="width: 90%;">
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="text-center">
+            <button type="button" class="btn btn-primary btn-lg">Click here to view more</button>
+        </div>
+    </div>
+</section>
+
+<section class="page-section">
+    <div class="container">
+        <div class="text-center">
+            <h1 class="section-heading text-uppercase">Let's Start Creating</h1>
+        </div>
+        <br>
+        <br>
+        <div class="row text-center">
+            <div class="col-6 align-self-center">
+                <img src = "../images/levelcreator_login.png" style="width: 70%;">
+            </div>
+            <div class="col-6 align-self-center">
+                <span class="fa-stack fa-4x"><i class="far fa-check-circle text-primary"></i></span>
+                <h4 class="my-3">Create an account and log in.</h4>
+                <p class="text-muted">Logging in allows you to save your work.. consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            </div>
+        </div>
+        <br>
+        <div class="border-bottom my-3"></div>
+        <br>
+        <div class="row text-center">
+            <div class="col-6 align-self-center">
+                <span class="fa-stack fa-4x"><i class="far fa-lightbulb text-primary"></i></span>
+                <h4 class="my-3">View other's work and follow other creators. </h4>
+                <p class="text-muted">consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            </div>
+            <div class="col-6 align-self-center">
+                <img src = "../images/public_screen.png" style="width: 90%;">
+            </div>
+
+        </div>
+        <br>
+        <div class="border-bottom my-3"></div>
+        <br>
+        <div class="row text-center">
+            <div class="col-6 align-self-center">
+                <img src = "../images/creating_screen.png" style="width: 100%;">
+            </div>
+            <div class="col-6 align-self-center">
+                <span class="fa-stack fa-4x"><i class="fab fa-creative-commons-remix text-primary"></i></span>
+                <h4 class="my-3">Start building your own game level map. </h4>
+                <p class="text-muted">consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit</p>
+
+            </div>
+        </div>
+    </div>
+</section>
 
 
 <!-- Copyright Section -->
@@ -68,6 +155,8 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<!--icon kit-->
+<script src="https://kit.fontawesome.com/ef8993b96a.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
