--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,8 +23,8 @@
                     <img src="images/LogoMakr9uhDkH.png" class="logo-1">
                     <h4>Login here...</h4>
                     <div class="form-group form-inline">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" id="username" name="username"
+                        <label for="email">Username</label>
+                        <input type="email" class="form-control" id="email" name="email"
                                placeholder="Email">
                     </div>
 
