mail sending for password reset done
mail can be send now for password reset, a temporary password will be sent to user so they can login and reset password on profile page.
profile page still in progress

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -53,11 +53,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
                 </li>
 
                 <li sec:authorize="isAuthenticated()" class="nav-item">
-                    <a class="nav-link" href="/home">My Work</a>
+                    <a class="nav-link" href="#">My Work</a>
                 </li>
 
                 <li sec:authorize="isAuthenticated()"  class="nav-item">
