--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
                 <fieldset>
                     <!-- Thymeleaf + Spring Security error display -->
                     <div th:if="${param.error}" class="alert alert-danger">
-                        Invalid username and password.
+                        Invalid username or password.
                     </div>
 
                     <div th:if="${param.logout}" class="alert alert-success">
@@ -32,9 +32,12 @@
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" name="password"
                                placeholder="Password">
+
+                        <a href="/forgotPassword" class = "ml-2">Forgot Password?</a>
                     </div>
+
                     <!-- Login Button -->
-                    <div class="form-actions mt-2">
+                    <div class="form-actions">
                         <button type="submit" class="btn btn-primary">Submit</button>
 
                         <a href="/"> Cancel </a>
