--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -57,7 +57,7 @@
                 </li>
 
                 <li sec:authorize="isAuthenticated()" class="nav-item">
-                    <a class="nav-link" href="#">My Work</a>
+                    <a class="nav-link" href="/myWork">My Work</a>
                 </li>
 
                 <li sec:authorize="isAuthenticated()"  class="nav-item">
