Changed username to Email in login.html

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
                     <img src="images/LogoMakr9uhDkH.png" class="logo-1">
                     <h4>Login here...</h4>
                     <div class="form-group form-inline">
-                        <label for="email">Username</label>
+                        <label for="email">Email</label>
                         <input type="email" class="form-control" id="email" name="email"
                                placeholder="Email">
                     </div>
@@ -42,9 +42,6 @@
 
                         <a href="/"> Cancel </a>
                     </div>
-
-
-
 
                 </fieldset>
             </form>
