Href link to user profile page is added to navbar in fragment.html Profile page updated, now can change password through it when password and confirm password does not match to each other an alert message will appear at submit, otherwise a success message will appear Unuseful lines in head of homepage is deleted A link redirect user back to login page is added to forgot-password page

--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -21,7 +21,8 @@
                         <h5>Enter your email</h5>
                         <input type="email" class="form-control" name="email">
                     </div>
-                    <input type="submit" class="btn btn-primary btn-sm mb-2" value="Reset Password"><br>
+                    <input type="submit" class="btn btn-primary btn-sm mb-2" value="Reset Password">
+                    <a href="/login" class = "ml-2">Go Back to Sign in</a>
                 </div>
             </div>
         </form>
