Layer and its children classed objectlayer and tilelayer are added Item class is created for object on object layer Property class is created for customized properties profile page is updated a just a bit: Password->New Password:

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -25,7 +25,7 @@
             </div>
             <form th:action="@{/reset-password}" method="post">
                 <div class="form-group form-inline">
-                    <label for="password">Password</label>
+                    <label for="password">New Password:</label>
                     <input type="password" class="form-control input-sm chat-input" id="password" name="password"
                            placeholder="New Password">
                 </div>
