--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -1,58 +1,163 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymleaf.org/extras/spring-security">
+<head th:insert="fragments.html :: headerfiles">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
     <title>Title</title>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#BBF8FC">
-    <a class="navbar-brand" href="#">LevelCreator</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<header th:insert="fragments.html :: nav"></header>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
+<div class="container" style="max-width: 100%">
+    <div class=" row firstRow">
+        <div class="col-md-auto tools">
+            <div class="row iconrow">
+                <div class="col">
+                    <i class="fas fa-save icon"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-file-import icon"></i>
+                </div>
+            </div>
+            <div class="row iconrow">
+                <div class="col">
+                    <i class="fas fa-undo icon"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-redo icon"></i>
+                </div>
+            </div>
+            <div class="row iconrow">
+                <div class="col">
+                    <i class="fas fa-search-plus icon"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-search-minus icon"></i>
+                </div>
+            </div>
+            <div class="row iconrow">
+                <div class="col">
+                    <i class="fas fa-fill-drip icon"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-download icon"></i>
+                </div>
+            </div>
+            <div class="row iconrow">
+                <div class="col">
+                    <i class="fas fa-object-group icon"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-eraser icon"></i>
+                </div>
+            </div>
+            <div class="row iconrow">
+                <div class="col">
+                    <i class="fas fa-edit icon"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-users icon"></i>
+                </div>
+            </div>
+            <div class="row iconrow">
+                <div class="col">
+                    <i class="fas fa-info-circle icon"></i>
+                </div>
+                <div class="col">
+                    <i class="far fa-file-image icon"></i>
+                </div>
+            </div>
+        </div>
 
-            <li class="nav-item">
-                <a class="nav-link" href="#">My Work</a>
-            </li>
+        <div class="col-8 middle">
+            <div class="box" style="height:660px; width: 100%; position:relative; overflow: auto;">
+                <canvas id="canvas" style="border:1px solid"></canvas>
+            </div>
+        </div>
 
-            <li class="nav-item">
-                <a class="nav-link" href="#">Following<span class="badge badge-pill badge-info mx-1">12</span></a>
-            </li>
-        </ul>
+        <div class="col-2 panels">
+            <div class="row">
+                <div class="card card1">
+                    <div class="card-header">
+                        <center>Layers</center>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                            <div class="checkbox">
+                                <input type="checkbox" id="checkbox2"/>
+                                <label for="checkbox2">
+                                    <b>Layer #1 </b>
+                                </label>
 
-        <form class="form-inline mt-5 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+                                <span class="fas fa-lock" style="float:right;margin-right:5px;margin-top: 5px;"></span>
+                                &nbsp
+                                <span class="fas fa-eye" style="float:right;margin-right:20px; margin-top: 5px;"></span>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="card-body" style="height: 150px; background-color: white;">
 
-        <ul class="navbar-nav ml-5">
-            <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-user mx-1"></i>Username</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Log out</a>
-            </li>
-        </ul>
+                    </div>
+                    <div class="card-footer text-muted">
+                        <span class="fas fa-minus" style="float:right;margin-right:5px;margin-top: 5px;"></span>
+                        &nbsp
+                        <span class="fas fa-plus" style="float:right;margin-right:20px; margin-top: 5px;"></span>
+                        &nbsp
+                        <span class="fas fa-arrow-down" style="float:right;margin-right:20px;margin-top: 5px;"></span>
+                        &nbsp
+                        <span class="fas fa-arrow-up" style="float:right;margin-right:20px;margin-top: 5px;"></span>
+                    </div>
+                </div>
+
+            </div>
+            <br>
+
+            <div class="row">
+                <div class="card card1">
+                    <div class="card-header">
+                        <ul class="nav nav-tabs card-header-tabs">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Tileset #1</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="card-body" style="height: 150px; background-color: white;">
+                        <button type="button" class="btn btn-secondary btn-lg btn-block"> Import Tileset</button>
+
+                    </div>
+                    <div class="card-footer text-muted">
+                        <span class="fas fa-minus" style="float:right;margin-right:5px;margin-top: 5px;"></span>
+                        &nbsp
+                        <span class="fas fa-plus" style="float:right;margin-right:20px; margin-top: 5px;"></span>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
-</nav>
-
+</div>
 
 <!-- Optional JavaScript -->
+<script src="js/addProject.js"></script>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
