toolbar column look updated

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -16,7 +16,7 @@
 
 <div class="container" style="max-width: 100%">
     <div class=" row firstRow">
-        <div class="col-md-auto tools">
+        <div class="col-1 text-center tools pt-4">
             <div class="row iconrow">
                 <div class="col">
                     <i class="fas fa-save icon"></i>
