--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -87,21 +87,23 @@
                     <div class="card-header">
                         <center>Layers</center>
                     </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
-                            <div class="checkbox">
-                                <input type="checkbox" id="checkbox2"/>
-                                <label for="checkbox2">
-                                    <b>Layer #1 </b>
-                                </label>
 
-                                <span class="fas fa-lock" style="float:right;margin-right:5px;margin-top: 5px;"></span>
-                                &nbsp
-                                <span class="fas fa-eye" style="float:right;margin-right:20px; margin-top: 5px;"></span>
-                            </div>
-                        </li>
-                    </ul>
-                    <div class="card-body" style="height: 150px; background-color: white;">
+                    <div class="card-body" style="height: 150px; background-color: white; overflow: auto" >
+                        <ul class="list-group list-group-flush" id="layerList">
+
+<!--                            <li class="list-group-item">-->
+
+<!--                                    <label>-->
+<!--                                        <b>Layer #1 </b>-->
+<!--                                    </label>-->
+
+<!--                                    <span class="fas fa-lock" style="float:right;margin-right:5px;margin-top: 5px;"></span>-->
+
+<!--                                    <span class="fas fa-eye" style="float:right;margin-right:20px; margin-top: 5px;"></span>-->
+
+<!--                            </li>-->
+
+                        </ul>
 
                     </div>
                     <div class="card-footer text-muted">
@@ -116,31 +118,31 @@
                 </div>
 
             </div>
-            <br>
+<!--            <br>-->
 
-            <div class="row">
-                <div class="card card1">
-                    <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Tileset #1</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <br>
-                    <br>
-                    <div class="card-body" style="height: 150px; background-color: white;">
-                        <button type="button" class="btn btn-secondary btn-lg btn-block"> Import Tileset</button>
+<!--            <div class="row">-->
+<!--                <div class="card card1">-->
+<!--                    <div class="card-header">-->
+<!--                        <ul class="nav nav-tabs card-header-tabs">-->
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link active" href="#">Tileset #1</a>-->
+<!--                            </li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--                    <br>-->
+<!--                    <br>-->
+<!--                    <div class="card-body" style="height: 150px; background-color: white;">-->
+<!--                        <button type="button" class="btn btn-secondary btn-lg btn-block"> Import Tileset</button>-->
 
-                    </div>
-                    <div class="card-footer text-muted">
-                        <span class="fas fa-minus" style="float:right;margin-right:5px;margin-top: 5px;"></span>
-                        &nbsp
-                        <span class="fas fa-plus" style="float:right;margin-right:20px; margin-top: 5px;"></span>
+<!--                    </div>-->
+<!--                    <div class="card-footer text-muted">-->
+<!--                        <span class="fas fa-minus" style="float:right;margin-right:5px;margin-top: 5px;"></span>-->
+<!--                        &nbsp-->
+<!--                        <span class="fas fa-plus" style="float:right;margin-right:20px; margin-top: 5px;"></span>-->
 
-                    </div>
-                </div>
-            </div>
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
 
     </div>
