Implemente delete layer function where use can delete the layer that is currently selected.

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -95,7 +95,7 @@
 
                     </div>
                     <div class="card-footer text-muted">
-                        <span class="fas fa-minus" style="float:right;margin-right:5px;margin-top: 5px;"></span>
+                        <span class="fas fa-minus" onclick="deleteLayer()" style="float:right;margin-right:5px;margin-top: 5px;"></span>
                         &nbsp
                         <span class="fas fa-plus" style="float:right;margin-right:20px; margin-top: 5px;"></span>
                         &nbsp
