Change format and adding padding to layer panel buttons

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -95,25 +95,22 @@
 
                     </div>
                     <div class="card-footer text-muted">
+                        <i class="fas fa-arrow-down layerIcon"></i>
 
-                        <span class="fas fa-minus" onclick="deleteLayer()"
-                              style="float:right;margin-right:5px;margin-top: 5px;"></span>
+                        <i class="fas fa-arrow-up layerIcon"></i>
 
-                        <div class="dropdown">
 
-                            <span class="fas fa-plus dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown"
-                                  aria-haspopup="true" aria-expanded="false"
-                                  style="float:right;margin-right:20px; margin-top: 5px;"></span>
+                        <i class=" fas fa-plus dropdown-toggle layerIcon" id="dropdownMenu2" data-toggle="dropdown"
+                           aria-haspopup="true" aria-expanded="false"></i>
 
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                <button class="dropdown-item" type="button" onclick="newTileLayer()">Tile Layer</button>
-                                <button class="dropdown-item" type="button" onclick="newObjectLayer()">Object layer</button>
-                            </div>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                            <button class="dropdown-item" type="button" onclick="newTileLayer()">Tile Layer</button>
+                            <button class="dropdown-item" type="button" onclick="newObjectLayer()">Object layer
+                            </button>
                         </div>
 
-                        <span class="fas fa-arrow-down" style="float:right;margin-right:20px;margin-top: 5px;"></span>
+                        <i class="fas fa-minus layerIcon"></i>
 
-                        <span class="fas fa-arrow-up" style="float:right;margin-right:20px;margin-top: 5px;"></span>
                     </div>
                 </div>
 
