Fixed css/formatting for the visibility icon, the lock icon, and the input field for each layer.

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -88,8 +88,8 @@
                         <center>Layers</center>
                     </div>
 
-                    <div class="card-body" style="height: 300px; background-color: white; overflow: auto">
-                        <ul class="list-group list-group-flush" id="layerList">
+                    <div  style="height: 300px; overflow: auto">
+                        <ul class="list-group list-group-flush" id="layerList" style="height: 300px">
 
                         </ul>
 
